--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: '0 2 * * *' # Weekly on Sundays at 02:00
+#   schedule:
+#     - cron: '0 2 * * *' # Weekly on Sundays at 02:00
 jobs:
   update:
     runs-on: ubuntu-latest
