--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,4 +18,5 @@ jobs:
         name: cnbattle/docker-php
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        snapshot: true
         tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
