--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
       types: [published]
   push:
     branches:
-      - master
+      - main
 #   schedule:
 #     - cron: '0 2 * * *' # Weekly on Sundays at 02:00
 jobs:
