--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish to Registry
+name: Publish of Tags
 on:    
   release:
       types: [published]
@@ -18,5 +18,4 @@ jobs:
         name: cnbattle/docker-php
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        snapshot: true
-        tags: "latest,${{ env.STATE_RELEASE_VERSION }}"
+        tag_semver: true
