--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
 #   schedule:
-#     - cron: '0 2 * * *' # Weekly on Sundays at 02:00
+#     - cron: '0 2 * * *' # at 02:00
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -18,4 +18,5 @@ jobs:
         name: cnbattle/docker-php
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tag_semver: true
+        tags: "full"
+        dockerfile: full.Dockerfile
