--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -1,4 +1,4 @@
-name: Publish of Tags
+name: Publish of Full
 on:    
   release:
       types: [published]
@@ -11,12 +11,19 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    
+    - name: Checkout master Branch
+      uses: actions/checkout@master
+
+    - name: Get current date
+      id: date
+      run: echo "MY_DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+      
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
         name: cnbattle/docker-php
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tags: "full"
+        tags: "full,full-${{ env.MY_DATE }}"
         dockerfile: full.Dockerfile
