--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -1,29 +1,25 @@
-name: Publish of Full
-on:    
+name: Publish of full
+on:
   release:
-      types: [published]
+    types: [ published ]
   push:
     branches:
       - main
-#   schedule:
-#     - cron: '0 2 * * *' # at 02:00
+  schedule:
+    - cron: '0 2 * * *' # at 02:00
 jobs:
-  update:
+  build-full:
     runs-on: ubuntu-latest
     steps:
-    
-    - name: Checkout master Branch
-      uses: actions/checkout@master
-
-    - name: Get current date
-      id: date
-      run: echo "MY_DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
-      
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: cnbattle/docker-php
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        tags: "full,full-${{ env.MY_DATE }}"
-        dockerfile: full.Dockerfile
+      - name: Checkout master Branch
+        uses: actions/checkout@master
+      - name: Get current date
+        run: echo "MY_DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: cnbattle/docker-php
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: "full,full-${{ env.MY_DATE }}"
+          dockerfile: full.Dockerfile
