--- a/.github/workflows/hyperf.yml
+++ b/.github/workflows/hyperf.yml
@@ -6,8 +6,8 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/full.yml'
-      - 'default'
+      - '.github/workflows/hyperf.yml'
+      - 'hyperf'
   # schedule:
   #   - cron: '0 2 * * *' # at 02:00
 jobs:
@@ -24,5 +24,6 @@ jobs:
           name: cnbattle/docker-php
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: "full,full-${{ env.MY_DATE }}"
-          dockerfile: full.Dockerfile
+          tags: "hyperf,hyperf-${{ env.MY_DATE }}"
+          context: hyperf
+          dockerfile: Dockerfile
