--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '.github/workflows/runner.yml'
+      - 'default'
   # schedule:
   #   - cron: '0 2 * * *' # at 02:00
 jobs:
